# Evolving-sun

./: .bandit  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT_AUDIT.md  APPRAISAL.md  ARCHITECTURE.md  AUTOMATION_PLAYBOOK.md  BENCHMARKS.md  BRIDGE_MANIFESTO.md  CHANGELOG.md  CODEOWNERS  COMPREHENSIVE_AUDIT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile.dashboard  Evolving-sun   GOALS.md  GOALS_COMPLETION.md  Goodwill_and_Nanopotential_in_Quantum_Entanglement_Research.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_BASE.md  LICENSE  NANO_STATUS.md  PRODUCTION_CHECKLIST.md  PR_SUMMARY.md  QUICK_REFERENCE.md  README.md  SALES_DECK.md  SECURITY.md  SIMULATIONS.md  SWE_BENCH.md  VERIFICATION.md  WORKFLOW_STATUS.md  comprehensive_audit.py  conversation_audit.py  create-instruction.sh  deploy.sh  docker-compose.yml  example_agent_integration.py  (+8 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  act-history.json  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md
agents/: config.yml  task_distributor.py
benchmarks/: __init__.py  enterprise-suite.py  gpqa_runner.py  kegg_validator.py  swe_bench_runner.py
bridge/: README.md  bridge_api.stub
checkpoints/: iter_10.json
commercial/: pricing-tiers.yml  vc-metrics-dashboard.md
compliance/: certification-roadmap.md
config/: benchmark_config.yaml  models.yml  notifications.yaml
dashboard/: app.py
docs/: BUSINESS_CASE.md  CASE_STUDY_TEMPLATE.md  CROSS_MODEL_REDTEAM.md  CROSS_MODEL_REDTEAM_MAINTAINERS.md  DASHBOARD_SETUP.md  DISTRIBUTED_EXECUTION.md  DUE_DILIGENCE.md  EXAMPLES.md  LANDING_PAGE.md  LATENCY_OPTIMIZATION.md  README.md  SWE_BENCH_SETUP.md  ci-workflow.md  cosmic_library_defense.md  cosmic_library_forwarding.md  ethical_evolang.md  intuition_innovation.md  intuition_realworld.md  ip_additional_filings.md  ip_protection.md  learning_architecture.md  quantum_swarm_scaling.md  quick-reference.md  security_policy.md  workflow_documentation.md  workflow_expansion.md
examples/: README.md  complete_workflow.py  quick_start.sh  usage_examples.py  verify_results.sh
issues/: 4.md
k8s/: cron-grok4-audit.yaml
kegg_integration/: __init__.py  graph_builder.py  operator_mapper.py  pathway_fetcher.py
legal/: IP-PROTECTION-STRATEGY.md
llm_orchestration/: __init__.py  carbon_tracker.py  cost_optimizer.py  model_router.py
reports/: README.md
research/: hackerone_atomic_checklist.md  hackerone_intake_template.json
schemas/: benchmark_result.json
scripts/: BENCHMARKS.md  README.md  analyze_mutations.py  bio_kegg_run.py  compare_benchmarks.py  cpu_stress_controller.py  distributed_executor.py  extract_benchmark_summary.py  gpqa_run.py  import_conversations.py  latency_benchmark_real.py  live_vs_grokprime.sh  (+7 more)
(+118 files in other folders)
