[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolving-sun"
version = "0.2.0"
description = "Bio-AGI Self-Evolution System with KEGG-Inspired Mutation Engine"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Evolving Sun Team", email = "team@evolving-sun.ai"}
]
keywords = ["bio-agi", "self-evolution", "kegg", "mutation-engine", "federated-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "biopython>=1.83",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.12",
    "ruff>=0.1",
    "mypy>=1.7",
]

federated = [
    "flwr[simulation]>=1.6",
    "torch>=2.1",
    "scikit-learn>=1.3",
]

pqc = [
    "liboqs-python>=0.9",
    "pqcrypto>=0.4",
    "cryptography>=41.0",
]

blockchain = [
    "web3>=6.11",
    "eth-account>=0.10",
]

llm = [
    "openai>=1.6",
    "anthropic>=0.8",
    "langchain>=0.1",
    "langchain-community>=0.0.10",
]

benchmarks = [
    "datasets>=2.16",
    "evaluate>=0.4",
]

all = [
    "evolving-sun[dev,federated,pqc,blockchain,llm,benchmarks]",
]

[project.urls]
Homepage = "https://github.com/Teamintelxsel/Evolving-sun"
Documentation = "https://evolving-sun.readthedocs.io"
Repository = "https://github.com/Teamintelxsel/Evolving-sun"
Issues = "https://github.com/Teamintelxsel/Evolving-sun/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "kegg_integration*", "security*", "federated*", "simulations*", "compliance*", "ip_protection*", "llm_orchestration*", "benchmarks*", "pricing*", "tokenomics*", "financial*", "vc_dashboard*", "immutability*", "transparency*"]
exclude = ["tests*", "tmp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
